--- a/project_server/package.json
+++ b/project_server/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chokidar": "^3.5.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.0",
