--- a/project_front/package.json
+++ b/project_front/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
-    "styled-component": "^2.8.0"
+    "styled-component": "^2.8.0",
+    "xpath": "^0.0.34"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
